# new-repository

./: .coverage  .flake8  .gitignore  README.md  noxfile.py  pyproject.toml
.github/workflows/: release.yml  tests.yml
docs/: conf.py  index.rst  license.rst
src/new_repository/: console.py  wikipedia.py
tests/: __init__.py  test_console.py  test_wikipedia.py
